flux/generate-flux-multi-tenant-resources/.chainsaw-test/chainsaw-step-03-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: ftenant
  name: flux-tenant-namespace
