flux/generate-flux-multi-tenant-resources/.chainsaw-test/notGeneratedResource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    toolkit.fluxcd.io/tenant: ftenant
  name: ftenant
  namespace: old-flux-tenant-namespace
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
subjects:
- kind: User
  name: flux:old-flux-tenant-namespace:ftenant
- kind: ServiceAccount
  name: ftenant
  namespace: old-flux-tenant-namespace
---
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    toolkit.fluxcd.io/tenant: ftenant
  name: ftenant
  namespace: old-flux-tenant-namespace
