flux/generate-flux-multi-tenant-resources/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: old-flux-tenant-namespace
  labels:
    toolkit.fluxcd.io/tenant: ftenant
