flux/generate-flux-multi-tenant-resources/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-flux-multi-tenant-resources
status:
  ready: true
