flux/generate-flux-multi-tenant-resources/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: generate-flux-multi-tenant-resources
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: cluster-role.yaml
  - name: step-02
    try:
    - apply:
        file: ../generate-flux-multi-tenant-resources.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
  - name: step-04
    try:
    - assert:
        file: generatedResources.yaml
    - error:
        file: notGeneratedResource.yaml
